# rust-bstringify

./: Cargo.toml  README.md  index.html
.github/workflows/: CI.yml
0.1.1/: settings.html
0.1.1/bstringify/: index.html  sidebar-items.js
0.1.2/: search-index.js  source-files.js
0.1.2/bstringify/: all.html  index.html  macro.bstringify!.html  macro.bstringify.html
0.1.2/src/bstringify/: lib.rs.html
scripts/: post_doc.sh  pre_doc.sh
src/: lib.rs
tests/: basic.rs
